Add mobile QA Lab app
